# codex-orch

./: README.md  pyproject.toml
codex_orch/: __init__.py  cli.py  config.py  jsonl.py  models.py  router.py  runner.py  startup.py  state.py  worktree.py
codex_orch/templates/prompts/: implementer.md  navigator.md  reviewer.md  tester.md
codex_orch/templates/schemas/: plan.schema.json  task_result.schema.json
tests/: test_cli_prune.py  test_config.py  test_jsonl.py  test_models.py  test_router.py  test_spec_flag.py
