[tool.poetry]
name = "codex-orch"
version = "0.1.0"
description = "CLI orchestrator for Codex multi-worker workflows"
authors = ["All Rentz <dev@allrentz.com>"]
readme = "README.md"
packages = [{ include = "codex_orch" }]

[tool.poetry.dependencies]
python = ">=3.12"
typer = "^0.12"
pyyaml = "^6.0"
jsonschema = "^4.21"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
