[tool.poetry]
name = "codex-orch"
version = "0.1.0"
description = "CLI orchestrator for Codex multi-worker workflows"
authors = ["Cameron Basham <albatrossautomata@gmail.com>"]
readme = "README.md"
packages = [{ include = "codex_orch" }]

[tool.poetry.dependencies]
python = ">=3.12"
typer = ">=0.12.5,<0.13"
pyyaml = "^6.0"
jsonschema = "^4.21"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.scripts]
codex-orch = "codex_orch.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
